--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.12.0",
-    "@testing-library/react": "11.2.6",
-    "@testing-library/user-event": "12.8.3",
     "bootstrap": "4.6.0",
-    "node-sass": "4.14",
-    "npm": "7.13.0",
+    "dotenv": "^10.0.0",
+    "node-sass": "^6.0.1",
     "react": "16.8.0",
     "react-bootstrap": "1.6.0",
     "react-dom": "16.8.0",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
-    "react-redux": "7.2.4",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
     "react-skeleton": "^2.1.0",
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
-    "sass": "^1.34.1",
-    "web-vitals": "1.1.2"
+    "sass": "^1.34.1"
   },
   "scripts": {
     "start": "react-scripts start",
